--- a/.gitignore
+++ b/.gitignore
@@ -46,4 +46,4 @@ wp-config.php
 # Note: If you wish to whitelist themes,
 # uncomment the next line
 #/wp-content/themes
-node-modules/*
+/node_modules/*
